# ReverseReverbVST

./: .gitignore  CMakeLists.txt  README.md  ReverseReverb.jucer
.github/workflows/: build-windows.yml  build.yml
Builds/MacOSX/: Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
Builds/MacOSX/ReverseReverb.xcodeproj/: project.pbxproj
Builds/MacOSX/ReverseReverb.xcodeproj/project.xcworkspace/xcuserdata/liranronekalifa.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/ReverseReverb.xcodeproj/xcuserdata/liranronekalifa.xcuserdatad/xcschemes/: xcschememanagement.plist
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
